HelloUltraviolet/Fixtures/RejectedSource/Statements/UnsafeRequiredOperationOwnershipDiagnostic/Expected.uv
//! Expected diagnostic metadata for the UnsafeRequiredOperationOwnershipDiagnostic rejected-source specimen.

expectedDiagnostic("", "diag.18.UnsafeRequiredOperationOwnership")
